refactor(admin,application,message,payment,user,product): migrate controllers to DDD adapter pattern and convert DTOs to records
- refactor(admin): move all controllers from controller/ to adapter/inbound/web/controller/
- refactor(application): move controllers from controller/ to adapter/inbound/
- refactor(message): move controllers from controller/ to adapter/inbound/
- refactor(payment): move controllers from web/ to web/controller/ sub-package
- refactor(user): move controllers from web/ to web/controller/ sub-package
- refactor: convert DTOs from Lombok @Data to Java 16+ records (fix Java 25 compat)
- feat(admin): add AdminUserControllerExtension adapter controller
- feat(application): add adapter/inbound controller package
- feat(message): add adapter/inbound controller package
- feat(payment): add web/controller/ sub-package with controller impls
- feat(user): add adapter/inbound/web/controller/ package
- feat(product): add ProductAuditLog entity and repository
- feat(application): add OrderProductQueryAdapter for cross-module query
- feat(product): add ProductAuditLogRepositoryImpl adapter
- fix(admin): update service layer to use record accessor pattern
- test: migrate controller tests to match new adapter package structure
- test: update service tests to use record constructors